styles.css
:root {
	--navbar-color: #38013d;
	--main-color: #3c253e;
	--dropdown-color: #300833;
	--gradient-color: #3A023F;
	--gradient-black: rgba(17,17,17,0.3);
	--border-color: #180e1b;
	--main-text: rgb(247, 204, 242);
}

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.navbar {
	background: var(--navbar-color);
	height: 80px;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 1.2rem;
	position: sticky;
	top: 0;
	z-index: 999;
	box-shadow: 0 0 15px var(--navbar-color);
	transition: top 0.5s;
}

.navbar__container {
	display: flex;
	justify-content: space-between;
	height: 80px;
	z-index: 1;
	width: 100%;
	max-width: 1300px;
	margin: 0 auto;
	padding: 0 50px;
}

#navbar__logo {
	background-image: linear-gradient(to top, #a908fa 0%, rgb(226, 182, 231) 100%);
	background-size: 100%;
	background-clip: text;
	-webkit-background-clip: text;
	-moz-background-clip: text;
	-webkit-text-fill-color: transparent;
	-moz-text-fill-color: transparent;
	display: flex;
	align-items: center;
	text-decoration: none;
	font-size: 2rem;
}

.navbar__menu {
	display: flex;
	align-items: center;
	list-style: none;
	text-align: center;
}

.navbar__item {
	height: 80px;
}

.navbar__links {
	color: #fff;
	display: flex;
	align-items: center;
	justify-content: center;
	text-decoration: none;
	margin-left: 2rem;
	height: 100%;
}

.navbar__btn {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0 1rem;
	width: 100%;
}

.button {
	display: flex;
	justify-content: center;
	align-items: center;
	text-decoration: none;
	padding: 10px 20px;
	height: 100%;
	width: 100%;
	border: none;
	outline: none;
	border-radius: 4px;
	background: #4c5ac3;
	color: #fff;
	
}

.button:hover {
	background: #a229df;
	transition: all 0.3s ease;
}

.navbar__links:hover {
	color: #ae70ff;
	transition: all 0.3s ease;
}

@media screen and (max-width: 960px) {
	.navbar__container {
		display: flex;
		justify-content: space-between;
		height: 80px;
		z-index: 1;
		width: 100%;
		max-width: 1300px;
		padding: 0;
		
	}

	.navbar__menu {
		display: grid;
		grid-template-columns: auto;
		margin: 0;
		width: 100%;
		position: absolute;
		top: -1000px;
		opacity: 0;
		transition: all 0.5s ease;
		height: 50vh;
		z-index: -1;
		background-image: linear-gradient(to bottom, var(--gradient-color), var(--dropdown-color) 15%, var(--dropdown-color) 100%);
	}

	.navbar__menu.active {
		top: 100%;
		opacity: 1;
		transition: all 0.5s ease;
		z-index: 99;
		height: 50vh;
		font-size: 1.6rem;
	}

	#navbar__logo {
		padding-left: 25px;
	}

	.navbar__toggle .bar {
		width: 25px;
		height: 3px;
		margin: 5px auto;
		transition: all 0.3s ease-in-out;
		background: #fff;
	}

	.navbar__item {
		width: 100%;
	}

	.navbar__links {
		text-align: center;
		margin: 0 0;
		padding: 2rem;
		width: 100%;
		display: table;
	}

	#mobile-menu {
		position: absolute;
		top: 20%;
		right: 5%;
		transform: translate(5%, 20%);
	}

	.navbar__btn {
		padding-bottom: 2rem;
	}

	.button {
		display: flex;
		justify-content: center;
		align-items: center;
		width: 80%;
		height: 80px;
		margin: 0;
	}

	.navbar__toggle .bar {
		display: block;
		cursor: pointer;
	}

	#mobile-menu.is-active .bar:nth-child(2) {
		opacity: 0;
	}

	#mobile-menu.is-active .bar:nth-child(1) {
		transform: translateY(8px) rotate(45deg);
	}

	#mobile-menu.is-active .bar:nth-child(3) {
		transform: translateY(-8px) rotate(-45deg);
	}
}

/* Hero section */
.main {
	background-image: linear-gradient(to bottom, var(--gradient-color), var(--main-color) 20%, var(--main-color) 80%, var(--gradient-color) 100%);
}

.main__container {
	display: grid;
	grid-template-columns: 1fr 1fr;
	align-items: center;
	justify-self: center;
	margin: 0 auto;
	height: 75vh;
	z-index: 1;
	width: 100%;
	max-width: 1300px;
	padding: 0 50px;
}

.main__content h1 {
	font-size: 4rem;
	background-color: #6b23fb;
	background-image: linear-gradient(to top, #a229df 0%, rgb(238, 188, 244) 100%);
	background-size: 100%;
	background-clip: text;
	-webkit-background-clip: text;
	-moz-background-clip: text;
	-webkit-text-fill-color: transparent;
	-moz-text-fill-color: transparent;
}

.main__content b {
	font-size: 2.5rem;
	background-color: #6b23fb;
	background-image: linear-gradient(to top, #df6ebd 0%, #d88ac0 100%);
	background-size: 100%;
	background-clip: text;
	-webkit-background-clip: text;
	-moz-background-clip: text;
	-webkit-text-fill-color: transparent;
	-moz-text-fill-color: transparent;
}

#more-information {
	font-size: 1.75rem;
	background-color: var(--main-text);
	background-image: none;
}

/* .main__content p {
	margin-top: 1rem;
	font-size: 2rem;
	font-weight: 700;
	color: #fff;
} */

.main__img--container {
	text-align: center;
}

#main__img {
	border: 15px solid;
	border-color: var(--border-color);
	border-radius: 50%;
	display: block;
	margin: 0 auto;
	height: auto;
	width: auto;
}

@media screen and (max-width: 960px) {
	.main__container {
		display: grid;
		grid-template-columns: auto;
		align-items: center;
		justify-self: center;
		width: 100%;
		padding: 0 auto;
		height: 120vh;
	}

	.main {
		background-image: linear-gradient(to bottom, var(--gradient-color), var(--main-color) 10%, var(--main-color) 90%, var(--gradient-color) 100%);
	}

	#index_container {
		padding-bottom: 90%;
	}

	.main__content {
		text-align: center;
		margin-bottom: 4rem;
	}

	.main__content h1 {
		font-size: 2.5rem;
		margin-top: 2rem;;
	}

	.main__content p {
		margin-top: 1rem;
		font-size: 1.5rem;
	}
}

@media screen and (max-width: 480px) {
	.main__content h1 {
		font-size: 2rem;
		margin-top: 3rem;
	}

	.main__content p {
		margin-top: 2rem;
		font-size: 1.5rem;
	}

	.main__btn {
		padding: 12px 36px;
		margin: 2.5rem 0;
	}	
}

/* Account section */
.account {
	/* background-color: var(--main-color); */
	background: var(--main-color);
}

.account__container {
	/* background-color: var(--main-color); */
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	text-align: center;
}

#accounts_container {
	height: 25vh;
	width: 100vw;
	display: flex;
	justify-content: center;
}

#accounts_container h1 {
	text-align: center;
}

.account__card {
	margin: 5rem;
	height: 350px;
	width: 350px;
	border: 11px solid var(--border-color);
	border-radius: 50%;
	margin-bottom: 5rem;
	background-size: contain;
	background-repeat: no-repeat;
	position: relative;
	background-size: cover;
	background-position: center;
	text-decoration: none;
	color: #fff;
}

.account__container h2 {
	font-size: 2.5rem;
	position: relative;
	top: 110%;
	text-align: center;
}

.account__card_nohover {
	margin: 5rem;
	height: 350px;
	width: 350px;
	border: 11px solid var(--border-color);
	border-radius: 50%;
	margin-bottom: 5rem;
	background-size: contain;
	background-repeat: no-repeat;
	position: relative;
	background-size: cover;
	background-position: center;
	color: #fff;
}

#container_padding_down {
	padding-bottom: 5rem;
}

#youtube {
	background-image: linear-gradient(
		to bottom, rgba(0,0,0,0) 0%, var(--gradient-black) 100%), 
		url('/images/Youtube.png');
	
}

#twitter {
	background-image: linear-gradient(
		to bottom, rgba(0,0,0,0) 0%, var(--gradient-black) 100%), 
		url('/images/Twitter.png');
}

#roblox {
	background-image: linear-gradient(
		to bottom, rgba(0,0,0,0) 0%, var(--gradient-black) 100%), 
		url('/images/Roblox.jpg');
}

#discord {
	background-size: 125%;
	background-image: linear-gradient(
		to bottom, rgba(0,0,0,0) 0%, var(--gradient-black) 100%), 
		url('/images/Discord.png');
}

#github {
	background-size: 101.5%;
	background-color: #fff;
	background-image: linear-gradient(
		to bottom, rgba(0,0,0,0) 0%, var(--gradient-black) 100%), 
		url('/images/Github.svg');
}

.account__card:hover {
	transform: scale(1.05);
	transition: 0.2s ease-in;
	cursor: pointer;
}

@media screen and (max-width: 960px) {
	.account__card {
		height: 275px;
		width: 275px;
	}

	.account__card_nohover {
		height: 275px;
		width: 275px;
	}

	.account h2 {
		top: 115%;
	}
}

@media screen and (max-width: 480px) {
	.account__card {
		height: 195px;
		width: 195px;
	}

	.account__card_nohover {
		height: 195px;
		width: 195px;
	}

	.account__container h2 {
		font-size: 2rem;
	}
}

#about_container {
	height: auto;
	display: flex;
}

#about_content {
	height: auto;
	padding-bottom: 5.5rem;
	align-items: center;
	justify-content: center;
	text-align: center;
}

#about-me {
	font-size: 1.75rem;
	position: relative;
	bottom: auto;
	background-color: var(--main-text);
	background-image: none;
}

.footer__container{
	background-color: var(--navbar-color);
	padding: 4rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

@media screen and (max-width: 960px) {
	#about_content {
		padding-bottom: 1.5rem;
	}
}

